# prop-goal-weakening

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  craigar.opam  dune-project  weaken.opam
.github/workflows/: ci.yml
lib/: dune  eval.ml  formula.ml  graphviz.ml  lattice.ml  model.ml  model.mli  problem.ml  problem.mli  solver.ml  solver.mli
paper/: REVIEWS.md
test/: dune
